# tracer

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
cloudflare/: README.md  email-worker.js  wrangler.toml
data_gen/: generators.py  hard_negatives.py  paraphrase.py  pipeline.py  render.py  schemas.py
docs/: architecture.excalidraw  rust-workers.html
frontend/: package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/dsar/: page.tsx
frontend/app/dsar/[id]/: page.tsx
frontend/app/findings/: page.tsx
frontend/app/mosaic/: page.tsx
frontend/app/scan/: page.tsx
frontend/components/: chat-palette.tsx  kpi-card.tsx  notification-bell.tsx  page-header.tsx  sidebar.tsx  topbar.tsx
frontend/lib/: api.ts
services/: app.py  cert.py  config.py  db.py  dsar_intake.py  llm.py  notifications.py  schemas.py
services/connectors/: __init__.py  base.py  filesystem.py  graph.py
services/detectors/: __init__.py  base.py  gliner.py  presidio.py  reasoner.py
services/pipeline/: chunks.py  dedup.py  extract.py  mosaic.py  queue.py  routing.py
services/routes/: agents.py  chat.py  dsar.py  findings.py  mosaic.py  scan.py
tests/: test_scan_smoke.py
train/: README.md  colab_finetune.ipynb  convert.py  finetune.py
