[project]
name = "bosch-gdpr-pii"
version = "0.1.0"
description = "Synthetic PII dataset + fine-tuning + scan pipeline for Bosch GDPR hackathon"
requires-python = ">=3.10"
dependencies = [
    "faker>=30.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "orjson>=3.10.0",
    "reportlab>=4.2.0",
    "python-docx>=1.1.0",
    "pypdf>=6.12.2",
]

[dependency-groups]
train = [
    "gliner>=0.2.13",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "accelerate>=0.30.0",
    "seqeval>=1.2.2",
]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "presidio-analyzer>=2.2.0",
    "spacy>=3.7.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "gliner>=0.2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_gen", "train", "services"]
